# ioc-cfn-mgmt-backend-svc

./: .dockerignore  .env.example  .flake8  .gitignore  .legitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  THIRD-PARTY-NOTICES  Taskfile.yaml  alembic.ini  docker-compose.yml  docker-entrypoint.sh  env.conf  full-stack.md  pyproject.toml  sonar-project.properties
.github/: ACT.md  dependabot.yml
.github/workflows/: ci.yaml  docker-build-push.yaml  github-pages.yaml
alembic/: env.py
alembic/versions/: 0001_consolidated_schema.py  0002_add_workspace_scoped_agents_and_policies.py  0003_add_config_timestamp_to_cfn.py  0003_add_config_version_to_cfn.py  0004_add_ip_port_to_cfn.py  0005_fix_memory_provider_schema.py  0006_make_workspace_cfn_id_nullable.py  0007_add_memory_providers_to_mas.py  0008_add_description_to_memory_provider.py  0009_add_agent_name_unique_constraint.py  0010_ce_lifecycle_and_mas_association.py  (+2 more)
docs/: CNAME  DATABASE_MIGRATIONS.md  README.md  index.html  openapi.json
scripts/: README.md  generate_openapi_spec.py  init-multi-db.sh  lint.sh  migrate.sh  sample.sh  unit-test.sh
src/server/: main.py  (+3 more)
tests/: __init__.py  conftest.py  test_api_keys.py  test_audit_cfn_events.py  test_auth_jwt.py  test_authz_rbac.py  test_cognition_engines.py  test_cognition_fabric_node.py  test_cognitive_engines.py  test_cognitive_fabric_node.py  test_diagnostics.py  test_knowledge_adapters.py  test_memory_providers.py  test_multi_agentic_system.py  test_reasoners.py  test_server.py  test_signup_default_workspace.py  test_users.py  test_workspace_invitations.py  test_workspaces.py
(+147 files in other folders)
