[project]
name = "ioc-cfn-mgmt-plane-svc"
version = "0.1.0"
description = "IoC CFN Management Backend Service"
readme = "README.md"
requires-python = ">=3.10,<4.0.0"
authors = [
    {name = "IoC Team"}
]
dynamic = ["dependencies"]

[tool.poetry]
packages = [{include = "server", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0.0"
fastapi = ">=0.135.3,<1.0.0"
uvicorn = {extras = ["standard"], version = ">=0.44.0,<1.0.0"}
sqlalchemy = ">=2.0.49,<3.0.0"
prometheus-fastapi-instrumentator = "6.1.0"
email-validator = ">=2.1.1,<3.0.0"
requests = ">=2.33.1,<3.0.0"
psycopg2-binary = "2.9.11"
python-dotenv = ">=1.0.0,<2.0.0"
cryptography = ">=46.0.7,<47.0.0"
regopy = ">=1.4.0,<2.0.0"
PyJWT = ">=2.10.0,<3.0.0"
bcrypt = ">=5.0.0,<6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.3,<10.0.0"
pytest-asyncio = ">=1.3.0,<2.0.0"
pytest-cov = ">=7.1.0,<8.0.0"
black = ">=24.10.0,<27.0.0"
flake8 = ">=6.1.0,<8.0.0"
httpx = ">=0.24.1,<1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
# Ignore auth-related tests since authentication is disabled (get_auth_user returns mock admin)
addopts = "-v --tb=short --ignore=tests/test_auth_jwt.py --ignore=tests/test_authz_rbac.py"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503", "W293"]
